--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/public/assets/final_bg_image.png");
+    background-image: url("/public/assets/2.1.jfif");
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
    }
@@ -17,7 +17,7 @@ body {
     border: 3px solid #000;
     border-radius: 10px;
     background-image:url('http://alphadogonlinemarketing.com/wp-content/uploads/2018/08/Transparent-background.png');
-    margin-top:15%;
+    margin-top:10%;
     /* width: 65%; */
     height:25%;
     padding:1rem
