--- a/src/Home.css
+++ b/src/Home.css
@@ -1,13 +1,14 @@
-body {
-    background-image: url("/public/assets/2.1.jfif");
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-   }
+#bgimghome{
+     background-image: url("/public/assets/img.png");
+     background-repeat: no-repeat;
+     background-size: 100vw
+}
    #homecontainer{
     display:flex;
     flex-direction: row;
     align-items:center;
     justify-content: space-around;
+    height:90vh
    }
    #home{
     color: white;
@@ -17,9 +18,9 @@ body {
     border: 3px solid #000;
     border-radius: 10px;
     background-image:url('http://alphadogonlinemarketing.com/wp-content/uploads/2018/08/Transparent-background.png');
-    margin-top:10%;
+    margin-top:0%;
     /* width: 65%; */
-    height:25%;
+    height:58%;
     padding:1rem
     
 
