--- a/src/WhyDoWe.css
+++ b/src/WhyDoWe.css
@@ -1,10 +1,10 @@
 #bgimgwhydowe{
     background-image: url("/public/assets/2.4.png");
     background-repeat: no-repeat;
-    background-size: 100vw
+    background-size: 100vw 120vh
 }
 #whydowe{
-height:90vh;
+height:100vh;
 display:flex;
 flex-direction: column;
 align-items: center;
@@ -13,12 +13,12 @@ align-items: center;
     font-size: 3rem;
     font-weight:900;
     color:#ffffff;
-    margin:2rem;
+    margin:1.5rem;
 }
 .card-container{
     
     position: absolute;
-    top:15rem;
+    top:13rem;
     align-items: center;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
