Added some page in why do we and made card in conflict and confusion

--- a/src/Card.css
+++ b/src/Card.css
@@ -1,17 +1,33 @@
 .cards{
     width: 20rem;
-    height:30rem
+    height:32rem;
+    padding:0.1rem;
+    margin:0.2rem
+
+    
 }
 #cardimag{
-    width: 20rem;
+    width: 19.5rem;
     height: 14rem
 }
 .desc{
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
+    font-size: 1rem;
 }
-.title{
+.title-card{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
+    margin:0.2rem;
+    padding:0.2rem;
+    text-align: center;
 
+}.cardBody{
+    padding:0.2rem;
+    margin:0.2rem;
+    
+}
+.btncard{
+    margin:0.5rem;
+ 
 }
