--- a/src/ConflictAndConfusion.css
+++ b/src/ConflictAndConfusion.css
@@ -1,5 +1,5 @@
 #bgimgconflictandconfusion{
-    background-image: url("/public/assets/2.4.png");
+    background-image: url("/public/assets/37.jpg");
     background-repeat: no-repeat;
     background-size: 100vw 120vh
 }
