--- a/src/WhyDoWe.css
+++ b/src/WhyDoWe.css
@@ -1,5 +1,5 @@
 #bgimgwhydowe{
-    background-image: url("/public/assets/2.4.png");
+    background-image: url("/public/assets/36.jpg");
     background-repeat: no-repeat;
     background-size: 100vw 120vh
 }
