--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 #bgimghome{
-     background-image: url("/public/assets/img.png");
+     background-image: url("/public/assets/2.4.png");
      background-repeat: no-repeat;
      background-size: 100vw
 }
