--- a/src/components/WhyDoWeCss.css/DoNotTouchCss.css
+++ b/src/components/WhyDoWeCss.css/DoNotTouchCss.css
@@ -1,27 +1,26 @@
-.container{
-    display:flex;
-    align-items: center;
-    margin-bottom:1rem;
+.container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
 }
-.title{
-    text-align:center;
-    margin:2rem
+.title {
+  text-align: center;
+  margin: 2rem;
 }
-.img:first-child{
-    width: 16rem;
-    margin:1rem
+.img:first-child {
+  width: 16rem;
+  margin: 1rem;
 }
-p{
-    font-family: Poppins;
-    font-size: 1.2rem;
+p {
+  font-family: Poppins;
+  font-size: 1.2rem;
 }
-.footer{
-    text-align:center;
-    background-color:#000000;
-    color:#FFFF;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height:3rem
+.footer {
+  text-align: center;
+  background-color: #000000;
+  color: #ffff;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
 }
- 
