--- a/src/Home.css
+++ b/src/Home.css
@@ -26,10 +26,10 @@
 } */
 
 #home {
-  height: 500px;
-  width: 750px;
+  height: 420px;
+  width: 790px;
   background: inherit;
-  font-size: 1.2rem;
+  font-size: 1.7rem;
   padding: 2rem;
   align-items: center;
   text-align: center;
@@ -39,6 +39,7 @@
   backdrop-filter: blur(8px);
   position: absolute;
   overflow: hidden;
+  color:white;
 }
 
 .home:before {
