--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -56,11 +56,12 @@
         display:flex;
         flex-direction: column;
         
-        height: 35rem;
+        height: 30rem;
         width: 42%;
         margin-left:40%;
-        background-color: #343434;
+        background-color:  rgba(255, 255, 255, 0.25);;
         text-align: center;
+        border-radius:10px
 
     }.container-1{
         justify-content: space-around;
@@ -69,14 +70,21 @@
         color:white;
         margin:2rem
     }
+    .developer-div-title{
+        color:white;
+        font-weight: 600;font-size:2rem
+    }
     .social-icons{
         display: flex;
-        justify-items: space-between;
+        justify-content: space-evenly;
     }.developer-card{
         width:15rem;
         height:8rem;
+        border-radius:10px
     }
     
     .developer-title{
         color: #343434
+    }.icons{
+        width:1.8rem
     }
