Made alignment proper

--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -37,8 +37,8 @@
         
     } .about-text{
         width:30rem;
-        height:28rem;
-        font-size: 1.7rem;
+        height:15rem;
+        font-size: 1.2rem;
         padding: 1rem;
         align-items: center;
         text-align: center;
@@ -80,7 +80,8 @@
     }.developer-card{
         width:15rem;
         height:8rem;
-        border-radius:10px
+        border-radius:10px;
+        margin: 0.2rem;
     }
     
     .developer-title{
