--- a/src/ConflictAndConfusion.css
+++ b/src/ConflictAndConfusion.css
@@ -1,10 +1,12 @@
 #bgimgconflictandconfusion{
     background-image: url("/public/assets/37.jpg");
     background-repeat: no-repeat;
-    background-size: 100vw 120vh
+    background-size: cover;
+    /* margin-top:2rem */
+     
 }
 #conflictandconfusion{
-height:90vh;
+height:100vh;
 display:flex;
 flex-direction: column;
 align-items: center;
@@ -17,12 +19,15 @@ align-items: center;
 }
 .card-container{
     
+    width: 90%;
     position: absolute;
     top:13rem;
+    /* left:1rem; */
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 3rem;
+    grid-template-columns: repeat(4, 316px);
+    grid-gap: 0.5rem;
+  
   
 
 }
