--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,9 +1,10 @@
 .nav-i{
-    font-size:1.5rem
+    font-size:1.3rem
 }
 #login{
     width:8rem;
-    position:relative;
-    margin-left:50rem;
+    /* position:relative; */
+    /* margin-left:rem; */
+    margin-left: 46rem;
     font-size:1.3rem
 }
