--- a/src/WhyDoWe.css
+++ b/src/WhyDoWe.css
@@ -1,7 +1,8 @@
 #bgimgwhydowe{
     background-image: url("/public/assets/36.jpg");
     background-repeat: no-repeat;
-    background-size: 100vw 120vh
+    background-size: cover;
+    /* margin-top:10rem */
 }
 #whydowe{
 height:100vh;
@@ -16,13 +17,15 @@ align-items: center;
     margin:1.5rem;
 }
 .card-container{
-    
+    margin-left:0;
+    width: 90%;
     position: absolute;
     top:13rem;
+    left:1rem;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 3rem;
+    grid-template-columns: repeat(4, 316px);
+    grid-gap: 0.5rem;
   
 
 }
