--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   padding:0;
  }
  body{
-  background-color:#ffffff
+  background-color:#ffffff;
+  padding: 0;
+  margin:0
  }
  .heading{
   text-align: center;
