--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
-*{
+* {
   margin: 0;
-  padding:0;
- }
- body{
-  background-color:#ffffff;
   padding: 0;
-  margin:0
- }
- .heading{
-  text-align: center;
-  padding:1.0rem ;
-  background-color:#F55A5A;
-  color:#ffffff;
-  font-family: 'Cormorant SC', serif;
-  font-size:2.8rem;
-  width: 100%;
- } 
- #navbar{
-  text-align: center;
-  padding:1.0rem ;
-  background-color:#F55A5A;
-  color:#ffffff;
-  font-family: 'Cormorant SC', serif;
-  font-size:1.3rem;
- }
- #register_login{
-  position:absolute;
-  right:15px;
- }
+}
 
- 
+body {
+  background-color: #ffffff;
+  padding: 0;
+  margin: 0
+}
+
+.heading {
+  text-align: center;
+  padding: 1.0rem;
+  background-color: #F55A5A;
+  color: #ffffff;
+  font-family: 'Cormorant SC', serif;
+  font-size: 2.8rem;
+  width: 100%;
+}
+
+#navbar {
+  text-align: center;
+  padding: 1.0rem;
+  background-color: #F55A5A;
+  color: #ffffff;
+  font-family: 'Cormorant SC', serif;
+  font-size: 1.3rem;
+}
+
+#register_login {
+  position: absolute;
+  right: 15px;
+}
+
+.read-aloud-btn {
+  background-color: #F55A5A;
+  color: #ffffff;
+  font-family: 'Cormorant SC', serif;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem;
+  margin: 0.5rem;
+  z-index: 5;
+}
