--- a/src/components/WhyDoWeCss.css/DoNamastecss.css
+++ b/src/components/WhyDoWeCss.css/DoNamastecss.css
@@ -1,29 +1,39 @@
-.container{
-    display:flex;
+.container {
+    display: flex;
     align-items: center;
-    margin-bottom:1rem;
+    margin-bottom: 1rem;
 }
-.title{
-    text-align:center;
-    margin:2rem
+
+.title {
+    text-align: center;
+    margin: 2rem
 }
-.img:first-child{
+
+.img:first-child {
     width: 16rem;
-    margin:1rem
+    margin: 1rem
 }
-p{
+
+p {
     font-family: Poppins;
     font-size: 1rem;
 }
-.footer{
-    text-align:center;
-    background-color:#000000;
-    color:#FFFF;
+
+.footer {
+    text-align: center;
+    background-color: #000000;
+    color: #FFFF;
     position: relative;
     bottom: 0;
     width: 100%;
-    height:3rem
+    height: 3rem
 }
-.doNamastecard{
-    margin-bottom:0rem
+
+.doNamastecard {
+    margin-bottom: 0rem
+}
+
+.namaste-btn {
+    margin-left: 50%;
+    display: inline;
 }
